; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_ewmhints.c_ewmh_get_window_state.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_ewmhints.c_ewmh_get_window_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64, i64, i64 }

@False = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"_NET_WM_STATE\00", align 1
@SEAMLESSRDP_NORMAL = common dso_local global i32 0, align 4
@True = common dso_local global i64 0, align 8
@SEAMLESSRDP_MAXIMIZED = common dso_local global i32 0, align 4
@SEAMLESSRDP_MINIMIZED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ewmh_get_window_state(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  %13 = load i64, i64* @False, align 8
  store i64 %13, i64* %12, align 8
  store i64 %13, i64* %11, align 8
  store i64 %13, i64* %10, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i64 @get_property_value(%struct.TYPE_6__* %14, i32 %15, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 64, i64* %6, i8** %7, i32 0)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* @SEAMLESSRDP_NORMAL, align 4
  store i32 %19, i32* %3, align 4
  br label %84

20:                                               ; preds = %2
  %21 = load i8*, i8** %7, align 8
  %22 = bitcast i8* %21 to i64*
  store i64* %22, i64** %8, align 8
  store i64 0, i64* %9, align 8
  br label %23

23:                                               ; preds = %64, %20
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* %6, align 8
  %26 = icmp ult i64 %24, %25
  br i1 %26, label %27, label %67

27:                                               ; preds = %23
  %28 = load i64*, i64** %8, align 8
  %29 = load i64, i64* %9, align 8
  %30 = getelementptr inbounds i64, i64* %28, i64 %29
  %31 = load i64, i64* %30, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp eq i64 %31, %35
  br i1 %36, label %37, label %39

37:                                               ; preds = %27
  %38 = load i64, i64* @True, align 8
  store i64 %38, i64* %10, align 8
  br label %39

39:                                               ; preds = %37, %27
  %40 = load i64*, i64** %8, align 8
  %41 = load i64, i64* %9, align 8
  %42 = getelementptr inbounds i64, i64* %40, i64 %41
  %43 = load i64, i64* %42, align 8
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 1
  %47 = load i64, i64* %46, align 8
  %48 = icmp eq i64 %43, %47
  br i1 %48, label %49, label %51

49:                                               ; preds = %39
  %50 = load i64, i64* @True, align 8
  store i64 %50, i64* %11, align 8
  br label %51

51:                                               ; preds = %49, %39
  %52 = load i64*, i64** %8, align 8
  %53 = load i64, i64* %9, align 8
  %54 = getelementptr inbounds i64, i64* %52, i64 %53
  %55 = load i64, i64* %54, align 8
  %56 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %57 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %57, i32 0, i32 2
  %59 = load i64, i64* %58, align 8
  %60 = icmp eq i64 %55, %59
  br i1 %60, label %61, label %63

61:                                               ; preds = %51
  %62 = load i64, i64* @True, align 8
  store i64 %62, i64* %12, align 8
  br label %63

63:                                               ; preds = %61, %51
  br label %64

64:                                               ; preds = %63
  %65 = load i64, i64* %9, align 8
  %66 = add i64 %65, 1
  store i64 %66, i64* %9, align 8
  br label %23

67:                                               ; preds = %23
  %68 = load i8*, i8** %7, align 8
  %69 = call i32 @XFree(i8* %68)
  %70 = load i64, i64* %10, align 8
  %71 = icmp ne i64 %70, 0
  br i1 %71, label %72, label %77

72:                                               ; preds = %67
  %73 = load i64, i64* %11, align 8
  %74 = icmp ne i64 %73, 0
  br i1 %74, label %75, label %77

75:                                               ; preds = %72
  %76 = load i32, i32* @SEAMLESSRDP_MAXIMIZED, align 4
  store i32 %76, i32* %3, align 4
  br label %84

77:                                               ; preds = %72, %67
  %78 = load i64, i64* %12, align 8
  %79 = icmp ne i64 %78, 0
  br i1 %79, label %80, label %82

80:                                               ; preds = %77
  %81 = load i32, i32* @SEAMLESSRDP_MINIMIZED, align 4
  store i32 %81, i32* %3, align 4
  br label %84

82:                                               ; preds = %77
  %83 = load i32, i32* @SEAMLESSRDP_NORMAL, align 4
  store i32 %83, i32* %3, align 4
  br label %84

84:                                               ; preds = %82, %80, %75, %18
  %85 = load i32, i32* %3, align 4
  ret i32 %85
}

declare dso_local i64 @get_property_value(%struct.TYPE_6__*, i32, i8*, i32, i64*, i8**, i32) #1

declare dso_local i32 @XFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
